mobile app done - fixed bug of headline loading again, they now cut off at 6 headlines, animations added, created function to load gb first then will change country depending on button clicked

--- a/index.css
+++ b/index.css
@@ -107,20 +107,26 @@ h3 {
   padding: 10px;
 }
 
-.article-url {
-  background-color: var(--color-five);
+
+
+.article-url:hover {
+  background-color: var(--color-three);
+  transition: all .2s ease-in-out;
+  cursor: pointer;
 }
 
-.article-url a {
+.article-url {
   color: white;
+  background-color: var(--color-five);
   text-decoration: none;
-  width: 100%;
+  width: 85%;
+  display: inline-block;
   padding: 10px;
   font-size: 1.5rem;
   font-family: 'Lora', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#gb, #us, #weather {
+section * {
   opacity: 0;
   animation-name: tabs;
   animation-duration: 3s;
